force-app/main/default/objects/Contact/fields/Agency_Code__c.field-meta.xml
<CustomField>
    <fullName>Agency_Code__c</fullName>
    <label>Agency Code</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>