force-app/main/default/objects/Contact/fields/Agency_Phone__c.field-meta.xml
<CustomField>
    <fullName>Agency_Phone__c</fullName>
    <formula>Account.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency Phone1</label>
    <type>Text</type>
</CustomField>